Fix new ticket with no previous

--- a/config.json.template
+++ b/config.json.template
@@ -6,5 +6,6 @@
     "allowed_roles": [],
     "category_id": 0,
     "ticket_log_id": 0,
-    "report_channel_id": 0
+    "report_channel_id": 0,
+    "cooldown": 0
 }
